<resources>
    <string name="app_name">LogIn</string>
    <string name="sign_in_with">Sign In With</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="login">login</string>
    <string name="libarary">Libarary</string>
    <string name="reading_now">Reading Now</string>
    <string name="shop">Shop</string>
    <string name="audio_books">Audio Books</string>
    <string name="non_fiction_books">Non Fiction Books</string>
    <string name="sci_fiction_books">Sci-fiction books</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="mystery">Mystery</string>
    <string name="cyberpunk">Cyberpunk</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin id ipsum nibh. Proin quis mattis orci, eget placerat tellus. Aliquam sit amet malesuada nunc, eu vehicula arcu. Vivamus mi nunc, mattis et eleifend non, pulvinar in magna. Aenean neque dui, viverra vel faucibus a, consectetur non orci. Vivamus mauris sem, feugiat sit amet condimentum id, mollis sed augue. Vivamus tristique sodales bibendum. Mauris porttitor nulla tempus, volutpat arcu semper, ultrices enim. Nullam vitae eros dapibus, aliquam mi et, laoreet magna. Morbi ut vestibulum ligula. Sed ex nisl, ullamcorper eget quam blandit, tincidunt lacinia sapien. Aliquam facilisis, nibh vel viverra sollicitudin, urna lacus pellentesque nunc, id tincidunt sem dolor vitae neque.

Donec dapibus, purus non eleifend finibus, neque felis suscipit diam, quis sodales odio massa eget purus. Nullam in suscipit erat. Maecenas nec auctor diam, nec eleifend ante. Praesent leo ligula, congue at turpis quis, consectetur pellentesque est. Ut ac nisl ut tellus malesuada congue. Sed laoreet pellentesque libero, vitae molestie ipsum ullamcorper id. Phasellus nec neque nec quam convallis viverra. Sed non tortor in dui gravida venenatis. Fusce eu pharetra massa. Fusce dui tortor, ornare non auctor vel, vehicula id mi. Proin lacinia nulla tincidunt, suscipit ex vel, vehicula leo. Aenean mattis mi a massa luctus, eu tristique risus ornare. Donec eu ante mollis, lobortis augue sit amet, consectetur eros.

Ut egestas blandit ligula nec tincidunt. Nullam pretium eros quis tellus congue, quis blandit felis semper. Duis lobortis nec sapien quis condimentum. Phasellus at consectetur nunc, sed finibus felis. Maecenas a volutpat nibh. Integer viverra leo nec massa fringilla feugiat quis at risus. Donec non ipsum ac quam porta porta. Quisque et mi vel mi aliquet placerat. Pellentesque pharetra augue diam, quis rutrum erat feugiat sed.

Maecenas sit amet feugiat massa, nec vulputate ipsum. Nam vel cursus est, vitae luctus risus. Nunc a sapien et augue sollicitudin placerat. Mauris efficitur urna at urna volutpat, tristique facilisis orci tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer in lacus eu neque tristique varius et id purus. Maecenas non porttitor elit. Ut ipsum nisl, lacinia in tempor malesuada, vehicula et turpis. Quisque aliquet turpis id massa commodo, sit amet iaculis arcu commodo. Aliquam malesuada commodo justo, eu sagittis ante rutrum ut. Nulla ac porttitor lectus. Nulla consectetur blandit tincidunt. Aliquam blandit lacus at velit interdum, a viverra lectus facilisis. Morbi sit amet elementum risus.

Etiam dictum felis sem, quis dignissim lacus facilisis sit amet. Nullam et sem eu dui cursus luctus. Vivamus venenatis, dolor et fringilla molestie, sapien ex interdum erat, eget viverra sapien ex sed enim. Ut accumsan neque sit amet mattis lobortis. Nunc sed lacus dignissim, maximus neque vel, viverra ipsum. Donec sem tellus, egestas vitae finibus at, volutpat non lacus. Curabitur pretium sed elit et finibus. Sed venenatis elementum felis ut vehicula. Praesent ultricies magna turpis, quis pretium mauris iaculis sed. Nunc ut nulla maximus, sollicitudin libero porta, fringilla lacus. Cras eget cursus nibh, nec bibendum nibh. Vivamus a viverra nisl. Suspendisse potenti. Mauris sapien tortor, interdum non leo ac, ornare blandit arcu. Sed laoreet ligula metus, sit amet scelerisque libero consectetur finibus. Aliquam ullamcorper magna vitae ultrices tincidunt.

Cras in turpis porttitor, varius odio vel, accumsan lacus. Aenean ligula purus, mattis eu mauris quis, consequat blandit diam. Nullam euismod facilisis metus. Aliquam eu nisi sit amet lectus viverra euismod. Vivamus commodo diam velit, ut condimentum lorem fermentum quis. Ut a lacus semper neque facilisis venenatis. Donec nec orci a quam ornare egestas. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed placerat nec erat at pretium. Praesent lobortis lectus at felis auctor sollicitudin. Suspendisse quam nulla, luctus a arcu at, feugiat efficitur augue. Sed euismod felis porta, cursus nibh vitae, vestibulum urna. Sed in semper metus. Fusce pharetra sagittis eros eu consequat. Phasellus feugiat felis mi.

Pellentesque sapien magna, efficitur non aliquam non, maximus ut leo. Etiam et vehicula turpis, viverra dapibus felis. Suspendisse ultricies, metus in porttitor convallis, mi ante efficitur justo, non lacinia justo leo non lectus. Integer faucibus orci quis nisl viverra pellentesque. Phasellus quis ligula vitae felis lacinia porta at ut odio. Sed id elit tincidunt, scelerisque neque eu, ornare nunc. Donec eros neque, vestibulum sit amet bibendum et, vulputate non purus.

Sed eleifend diam ut ante pretium, eu egestas metus ultricies. Praesent dapibus gravida tellus scelerisque feugiat. Mauris dolor nibh, mattis a massa at, feugiat eleifend ligula. Duis at velit est. Aliquam tristique ut arcu eget vulputate. Donec placerat gravida massa, non tempus nibh faucibus a. Curabitur ultrices quam ex, a egestas quam accumsan in.

Praesent nec nulla aliquet, condimentum nibh ac, dictum nulla. Duis euismod urna nec est ornare, et molestie metus placerat. Fusce sit amet augue risus. Nullam lacinia lectus sollicitudin efficitur imperdiet. Cras bibendum nibh magna, non viverra lacus volutpat eu. Nulla semper interdum erat ac tincidunt. Donec et urna enim. Quisque imperdiet nisi purus, quis sollicitudin libero hendrerit nec. Vestibulum eget nisi at nisi ultricies volutpat ac et odio. Sed sed fermentum est, eget efficitur mi. Suspendisse viverra gravida dui et tincidunt. Nulla convallis lacus nec diam volutpat, volutpat sagittis dui suscipit. Nullam posuere tincidunt velit, ac ornare augue egestas posuere.

Donec lobortis sapien scelerisque tortor vehicula tincidunt. Mauris at tellus et diam interdum tempus. Nulla quis nunc in sem pretium semper. Etiam luctus dictum mauris at tempor. Quisque finibus urna vitae dolor dictum condimentum. Aliquam ut lectus eu nisi pulvinar sollicitudin quis sit amet velit. Mauris aliquam tristique viverra. Quisque auctor tellus non auctor efficitur. Morbi porttitor sapien ac diam condimentum egestas. Integer nec nisl eget diam porttitor pulvinar. Morbi ipsum metus, malesuada et justo nec, placerat placerat neque. Donec dapibus in ipsum ac porttitor. Vestibulum ut eros dignissim, cursus nibh fringilla, cursus urna.</string>
    <string name="dune">Dune</string>
    <string name="library">Library</string>
    <string name="title">Title</string>
    <string name="stolen_txt">This is my story. A letter from nowhere. Sixteen-year-old Gemma is kidnapped from Bangkok airport and taken to the Australian Outback. This wild and desolate</string>
    <string name="stolen">STOLEN</string>
    <string name="stolenPrice">$13.50</string>
    <string name="book_store">Book Store</string>
    <string name="discounts">Discounts</string>
    <string name="_laws_of_power">48 Laws of power</string>
    <string name="the_48_laws_of_power_txt">The 48 Laws of Power, The Art of Seduction, The 33 Strategies of War, and The 50th Law.</string>
    <string name="laws_txt">$14.30</string>
    <string name="good_strategy">Good Strategy\n Bad Strategy</string>
    <string name="strategy_txt">Strategy is about creating a favourable outcome in the future by applying focus, allocate resources and most import the actions.</string>
    <string name="strattxt">$13.50</string>
    <string name="thinking_strategically">Thinking Strategically</string>
    <string name="thinking_strategically_txt">Thinking Strategically is a rational approach to decision making that can reduce the stress and anxiety of uncertainty and will give you better control in life.</string>
    <string name="thinking_strategically_price">$13.50</string>
    <string name="dune_txt">Dune is a 1965 epic science fiction novel by American author Frank Herbert, originally published as two separate serials in Analog magazine.</string>
    <string name="dune_Price">$13.50</string>
</resources>