<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_6641316"
    tools:context=".Activity3Library">

    <TextView
        android:id="@+id/Act1readingNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#45FFFFFF"
        android:padding="20dp"
        android:text="@string/book_store"
        android:textColor="#5D4037"
        android:textSize="20sp"
        android:textStyle="bold"

        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/menu"
        android:layout_below="@id/Act1readingNow">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#D1D1D1"
                android:textSize="30sp"
                android:text="@string/discounts"
                android:paddingBottom="20dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#80FFFFFF"
                android:layout_marginBottom="30dp">

                <ImageView
                    android:layout_width="161dp"
                    android:layout_height="210dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/a15" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/_laws_of_power"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                   <TextView
                        android:layout_width="wrap_content"
                        android:padding="16dp"
                        android:layout_height="wrap_content"
                        android:text="@string/the_48_laws_of_power_txt"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/lawpowerbtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"

                            android:text="@string/laws_txt"
                            android:textColor="#455A64"
                            android:textSize="15sp" />
                        <Button
                            android:id="@+id/lawpowerSharebtn"
                            android:layout_width="40dp"
                            android:layout_height="47dp"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="25dp"
                            android:drawableBottom="@drawable/ic_baseline_share_24"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#80FFFFFF"
                android:layout_marginBottom="30dp">

                <ImageView
                    android:layout_width="161dp"
                    android:layout_height="210dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/a2" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/good_strategy"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:padding="7dp"
                        android:layout_height="wrap_content"
                        android:text="@string/strategy_txt"
                        android:textSize="15sp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/goodstratbtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/strattxt"
                            android:textColor="#455A64"
                            android:textSize="15sp" />
                        <Button
                            android:id="@+id/goodstratbtnShare"
                            android:layout_width="40dp"
                            android:layout_height="47dp"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="25dp"
                            android:drawableBottom="@drawable/ic_baseline_share_24"/>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#80FFFFFF"
                android:layout_marginBottom="30dp">

                <ImageView
                    android:layout_width="161dp"
                    android:layout_height="210dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/a3" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/thinking_strategically"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="7dp"
                        android:text="@string/thinking_strategically_txt"
                        android:textSize="15sp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/thinkingstratbtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/thinking_strategically_price"
                            android:textColor="#455A64"
                            android:textSize="15sp" />
                        <Button
                            android:id="@+id/thinkingstratSharebtn"
                            android:layout_width="40dp"
                            android:layout_height="47dp"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="25dp"
                            android:drawableBottom="@drawable/ic_baseline_share_24"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#80FFFFFF"
                android:layout_marginBottom="30dp">

                <ImageView
                    android:layout_width="161dp"
                    android:layout_height="210dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/a6" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/dune"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="7dp"
                        android:text="@string/dune_txt"
                        android:textSize="15sp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/dunebtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/dune_Price"
                            android:textColor="#455A64"
                            android:textSize="15sp" />
                        <Button
                            android:id="@+id/duneSharebtn"
                            android:layout_width="40dp"
                            android:layout_height="47dp"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="25dp"
                            android:drawableBottom="@drawable/ic_baseline_share_24"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#80FFFFFF"
                android:layout_marginBottom="30dp">

                <ImageView
                    android:layout_width="161dp"
                    android:layout_height="210dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/a7" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/stolen"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="7dp"
                        android:text="@string/stolen_txt"
                        android:textSize="15sp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/stolenbtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/stolenPrice"
                            android:textColor="#455A64"
                            android:textSize="15sp" />
                        <Button
                            android:id="@+id/stolenSharebtn"
                            android:layout_width="40dp"
                            android:layout_height="47dp"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="25dp"
                            android:drawableBottom="@drawable/ic_baseline_share_24"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Reading_Now"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="#30ffffff"
            android:drawableTop="@drawable/ic_baseline_chrome_reader_mode_24"
            android:maxWidth="100dp"
            android:text="@string/reading_now"
            android:textSize="12sp" />

        <Button
            android:id="@+id/Libarary"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="#30ffffff"
            android:drawableTop="@drawable/ic_baseline_library_books_24"
            android:maxWidth="100dp"
            android:text="@string/libarary"
            android:textSize="12sp"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/Book_Store"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="#30ffffff"
            android:drawableTop="@drawable/ic_baseline_local_grocery_store_24"
            android:maxWidth="100dp"
            android:text="@string/shop"
            android:textSize="12sp" />

        <Button
            android:id="@+id/Audio_Books"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="#30ffffff"
            android:drawableTop="@drawable/ic_baseline_headphones_24"
            android:maxWidth="100dp"
            android:text="@string/audio_books"
            android:textSize="12sp"
            android:textStyle="normal" />
    </LinearLayout>
</RelativeLayout>